--- a/stayabit/index.html
+++ b/stayabit/index.html
@@ -17,7 +17,7 @@
         <div>
             <p class="small-bold-text"><a href="https://albertodelacruz.io/">Alberto de la Cruz</a></p>
             <p class="bold-text">Stayabit Token Sale</p>
-            <p class="big-body-text main-text">We came up with the idea of the Stayabit token after our CTO began tinkering with Solidity on the Ethereum blockhain. We saw an enormous potential in issuing a utility token that can be used by token holders in the following ways:</p>
+            <p class="big-body-text main-text">We came up with the idea of the Stayabit token after our CTO began working with Solidity on the Ethereum blockhain. We saw an enormous potential in issuing a utility token that can be used by token holders in the following ways:</p>
                 <ol>
                     <li>Payment</li>
                     <li>Booking Priority</li>
@@ -27,11 +27,11 @@
                     <li>Membership Club</li>
                     <li>Credit Scoring</li>
                 </ol>
-            <p class="big-body-text main-text">These uses would not just be enormously beneficial to our business, there was potential that this could be the utility token for the entire furnished apartment rental system.</p>
-            <p class="big-body-text main-text">Naming this token the Stayabit, we went to work. Our CTO worked tirelessly on the smart contracts while I collaborated with the marketing team to define the look of the brand while simultaneously developing and designing our token sale landing page.</p>
+            <p class="big-body-text main-text">These uses would not just be enormously beneficial to our business, there was potential that this could be the de-facto utility token for the entire furnished apartment rental industry&mdash;a market with yearly revenues upwards of $170bn.</p>
+            <p class="big-body-text main-text">Naming this token the Stayabit, we went to work. Our CTO worked on implementing the smart contracts while I collaborated with the marketing team to define the look of the brand while simultaneously developing and designing our token sale landing page.</p>
             <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/stayabit-polygon.png" style="max-width: 400px;" class="website-image">
 
-            <p class="big-body-text main-text">Once the sale goes live, we needed a way for potential buyers to understand what state the sale is in. We were unique in that there'd be discounts depending on how many were sold, where the earlier you buy in the sale the better the discount tier you can potentially be. I designed a scaling bar graph that visually represented these tiers, as well as developed its responsiveness on mobile devices.</p>
+            <p class="big-body-text main-text">Once the sale goes live, we needed a way for potential buyers to understand what state the sale is in. We were unique in that there'd be discounts depending on how many were sold&mdash;where the earlier you buy in the sale, the better the discount tier you can potentially be in. I designed a scaling bar graph that visually represented these tiers, as well as developed its responsiveness on mobile devices.</p>
         <div class="images-box">
             <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
               <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/empty.png" class="website-image">
@@ -40,7 +40,7 @@
               <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/in-progress-hover.png" class="website-image">
             </div>
         <div class="images-box">
-        <p class="big-body-text main-text">I designed a 'checkout' flow where customers fill in their information before being taken to the wallet link, with these screens taking place in the top portion of the website, rather than using a modal or taking users to a brand-new page. This was done to keep customers in the context of the sale, if during their checkout process they wanted to look into a certain detail about the sale they'd just have to scroll down rather than exiting a modal or going back to the previous page.</p>
+        <p class="big-body-text main-text">I designed a 'checkout' flow where customers fill in their information before being taken to the wallet link, with these screens taking place in the top portion of the website, rather than using a modal or taking users to a brand-new page. This was done to keep customers in the context of the sale&mdash;if during their checkout process they wanted to look into a certain detail about the sale they'd just have to scroll down rather than exiting a modal or going back to the previous page.</p>
 
         <div class="images-box">   
            <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
@@ -51,9 +51,9 @@
             </div>
         </div>
 
-        <p class="big-body-text main-text">It was important for us to give back to the cryptocommunity and engage with the audience, so we created a Medium publication called <a href="https://medium.com/stayawhile-presents-faces-of-crypto" class="contentlinks">Faces of Crypto</a> where we interviewed several cryptoenthusiasts and the impact cryptocurrencies had made on their lives.</p>
+        <p class="big-body-text main-text">It was important for us to give back to the cryptocommunity and engage with the audience, so we created a Medium publication called <a href="https://medium.com/stayawhile-presents-faces-of-crypto" class="hyperlink">Faces of Crypto</a> where we interviewed several cryptoenthusiasts and the impact cryptocurrencies had made on their lives.</p>
 
-        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/medium.png" class="website-image">
+        <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/medium.png" class="website-image" style="border: 1px solid #A6A6A6;">
 
         <p class="big-body-text main-text">Due to the exposure of several vulnearabilities in the Solidity language, we were forced to delay our launch for sake of user security.</p>
 
