--- a/stayabit/index.html
+++ b/stayabit/index.html
@@ -29,7 +29,7 @@
                 </ol>
             <p class="big-body-text main-text">These uses would not just be enormously beneficial to our business, there was potential that this could be the de-facto utility token for the entire furnished apartment rental industry&mdash;a market with yearly revenues upwards of $170bn.</p>
             <p class="big-body-text main-text">Naming this token the Stayabit, we went to work. Our CTO worked on implementing the smart contracts while I collaborated with the marketing team to define the look of the brand while simultaneously developing and designing our token sale landing page.</p>
-            <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/stayabit-polygon.png" style="max-width: 400px;" class="website-image">
+            <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/stayabit-polygon.png" style="max-width: 300px;" class="website-image">
 
             <p class="big-body-text main-text">Once the sale goes live, we needed a way for potential buyers to understand what state the sale is in. We were unique in that there'd be discounts depending on how many were sold&mdash;where the earlier you buy in the sale, the better the discount tier you can potentially be in. I designed a scaling bar graph that visually represented these tiers, as well as developed its responsiveness on mobile devices.</p>
         <div class="images-box">
@@ -55,7 +55,7 @@
 
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/medium.png" class="website-image" style="border: 1px solid #A6A6A6;">
 
-        <p class="big-body-text main-text">Due to the exposure of several vulnearabilities in the Solidity language, we were forced to delay our launch for sake of user security.</p>
+        <p class="big-body-text main-text">Due to the exposure of several vulnearabilities in the Solidity language, we were forced to delay our launch for the sake of user security.</p>
 
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/screencapture-file-Users-albertogui-Code-StayAwhile-token-build-index-html-1508357823077.jpg" class="website-image">
     </div>
