--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text sticky-text">Social Media</p>
+            <p class="small-bold-text sticky-text">Contact</p>
         </div>
         <div class="content-cell">
             <p class="big-body-text">Feel free to reach out!</p>
