--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <p class="small-bold-text sticky-text">Press</p>
         </div>
         <div class="content-cell">
+            <p class="body-text"><a class="hyperlink" href="https://startup.info/alberto-de-la-cruz-token-interactive/">A Game Studio Finds New Opportunities during a Pandemic, Startup Info</a></p>
             <p class="body-text"><a class="hyperlink" href="https://www.loversmagazine.com/interviews/alberto-de-la-cruz">Interview with Alberto de la Cruz, Lovers Magazine</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://brutalistwebsites.com/albertogui.com/">Brutalist Websites</a></p>
         </div>
     </div>
     <div class="flex-container">
