--- a/stayawhile/index.html
+++ b/stayawhile/index.html
@@ -21,7 +21,7 @@
         </div>
         <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile/before.png" class="website-image">
         <p class="big-body-text main-text">With hundreds of wireframes produced in a short amount of time, countless edits to our brand direction and developing the CSS UI library for the entire site, our MVP was ready. The apartment team also had their hands full in leasing, furnishing, and setting up utilities in several apartments in the span of a couple months.</p>
-        <p class="big-body-text main-text">After initial feedback from customers, we decided to pivot our brand direction&mdash;emphasizing a more colorful, younger aesthetic with a heavy usage of vector illustration.</p>
+        <p class="big-body-text main-text">After initial feedback from customers, we decided to pivot our brand direction&mdash;emphasizing a more colorful, younger aesthetic with heavy usage of vector illustration.</p>
         <img src="https://wip-bucket.s3-us-west-2.amazonaws.com/github/stayawhile/after.png" class="website-image">
         <p class="big-body-text main-text">Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
         <p class="big-body-text main-text">The user dashboard has multiple states:</p>
@@ -91,7 +91,7 @@
         </div>
         <!-- FLICKITY EMPTY ERROR STATES -->
 
-        <p class="big-body-text main-text">I also designed a view for apartments under renovation or furnishing that are available to be booked.</p>
+        <p class="big-body-text main-text">Since we were making deals with landlords prior to units being ready and photographed, I designed a photo template for apartments under renovation that are available to be pre-booked.</p>
 
         <!-- TRANSFORMATION IN PROGRESS -->
         <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/transformation.jpg" class="website-image">
