--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div class="content-cell">
             <p class="big-body-text">For each of these titles I led the development from concept to creation by serving as director, producer, art director, and designer.</p>
             <p class="body-text">Train Drive 3D (Coming Soon)</p>
-            <p class="body-text">Reel Superstar (<a class="hyperlink" href="https://apps.apple.com/us/app/reel-superstar/id1548414930">iOS</a>)</p>
-            <p class="body-text">Sticky Tower! (<a class="hyperlink" href="https://apps.apple.com/us/app/sticky-tower/id1551845874">iOS</a>)</p>
-            <p class="body-text">Perfect Puppies (<a class="hyperlink" href="https://apps.apple.com/us/app/perfect-puppies/id1543736898">iOS</a>)</p>
-            <p class="body-text">You’re the President (<a class="hyperlink" href="https://apps.apple.com/us/app/youre-the-president/id1533099422">iOS</a>)</p>
-            <p class="body-text">Hyper Paparazzi (<a class="hyperlink" href="https://apps.apple.com/us/app/hyper-paparazzi/id1534518066">iOS</a>)</p>
-            <p class="body-text">Fallz.io (<a class="hyperlink" href="https://apps.apple.com/us/app/fallz-io/id1531781548">iOS</a>)</p>
+            <p class="body-text">Reel Superstar (<a class="hyperlink" href="https://apps.apple.com/us/app/reel-superstar/id1548414930">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.Token.ReelSuperstar">Android</a>)</p>
+            <p class="body-text">Sticky Tower! (<a class="hyperlink" href="https://apps.apple.com/us/app/sticky-tower/id1551845874">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.TokenInc.StickyTower">Android</a>)</p>
+            <p class="body-text">Perfect Puppies (<a class="hyperlink" href="https://apps.apple.com/us/app/perfect-puppies/id1543736898">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.PerfectPuppies">Android</a>)</p>
+            <p class="body-text">You’re the President (<a class="hyperlink" href="https://apps.apple.com/us/app/youre-the-president/id1533099422">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.YourethePresident">Android</a>)</p>
+            <p class="body-text">Hyper Paparazzi (<a class="hyperlink" href="https://apps.apple.com/us/app/hyper-paparazzi/id1534518066">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.hyperpaparazzi">Android</a>)</p>
+            <p class="body-text">Fallz.io (<a class="hyperlink" href="https://apps.apple.com/us/app/fallz-io/id1531781548">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.fallzio">Android</a>)</p>
             <p class="body-text">Split and Run (<a class="hyperlink" href="https://apps.apple.com/us/app/split-and-run/id1495069778">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.capricciohunt.game">Android</a>)</p>
             <p class="body-text">Capriccio Hunt (<a class="hyperlink" href="https://apps.apple.com/us/app/capriccio-hunt/id1455842245?ls=1">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.token.splitandrun">Android</a>)</p>
             <p class="body-text">The Little Mermaid: Circus Escape (<a class="hyperlink" href="https://apps.apple.com/us/app/little-mermaid-circus-escape/id1418549141">iOS</a>)</p>
