--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <div>
             <p class="small-bold-text">Alberto de la Cruz</p>
             <p class="bold-text">I am a producer creating innovative digital media.</p>
-            <p class="big-body-text main-text">I’m the co-founder and President of <a class="hyperlink" href="spanglishmedia.com">Spanglish Media</a> and founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a>&mdash;a mobile gaming studio.</p> 
+            <p class="big-body-text main-text">I’m the co-founder and President of <a class="hyperlink" href="http://spanglishmedia.com">Spanglish Media</a> and founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a>&mdash;a mobile gaming studio.</p> 
             <p class="big-body-text main-text">I am focused on leadership and creating innovative digital media. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. As someone with an extensive background in tech, design, production, and storytelling I excel at wearing many hats and making the impossible possible.</p>
         </div>
     </div>
