--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="content-cell">
             <p class="big-body-text">I took the lead on each of these titles as producer, developing the concepts from the ground up while being closely involved with the film's production and release.</p>
             <p class="body-text">Bezos: The Beginning (<a class="hyperlink" href="https://www.imdb.com/title/tt15559582/?ref_=ext_shr_lnk">IMDb</a>)</p>
-            <p class="body-text">The Tryout: Baseball (<a class="hyperlink" href="thetryout.com">Official Website</a>)</p>
+            <p class="body-text">The Tryout: Baseball (<a class="hyperlink" href="http://thetryout.com">Official Website</a>)</p>
             <p class="body-text">Stream (<a class="hyperlink" href="https://www.imdb.com/title/tt12092624/?ref_=ext_shr_lnk">IMDb</a>)</p>
         </div>
     </div>
