--- a/index.html
+++ b/index.html
@@ -144,12 +144,13 @@ a{
     <div id="center-box">
         <div>
             <p class="small-bold-text">Alberto de la Cruz</p>
-            <p class="bold-text">I am a producer creating innovative digital media.</p>
-            <p class="big-body-text main-text">I’m the co-founder and President of <a class="hyperlink" href="http://spanglishmedia.com">Spanglish Media</a> and founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a>&mdash;a mobile gaming studio.</p> 
+            <p class="bold-text">I am a product designer creating innovative digital media.</p>
+            <p class="big-body-text main-text">I’m the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and the founding designer at <a class="hyperlink" href="http://spanglishmedia.com">Spanglish Media</a> and &mdash;a mobile gaming studio.</p> 
             <p class="big-body-text main-text">I am focused on leadership and creating innovative digital media. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. As someone with an extensive background in tech, design, production, and storytelling I excel at wearing many hats and making the impossible possible.</p>
         </div>
     </div>
     <div class="divider-block"></div>
+    <!--
     <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">Filmography</p>
@@ -182,6 +183,7 @@ a{
             <p class="body-text">Arithmatic (<a class="hyperlink" href="https://apps.apple.com/us/app/arithmatic-master-your-mental-math/id1097565159">iOS</a>)</p>
         </div>
     </div>
+    -->
     <div class="flex-container">
         <div class="title-cell">
             <p class="small-bold-text sticky-text">UX Work</p>
