commented out lil mermaid

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ a{
         <div class="content-cell">
             <p class="big-body-text">A small collection of other projects I’ve created, sometimes for work and sometimes for fun.</p>
             <p class="body-text"><a class="hyperlink" href="http://beesjs.com/">Bees.js</a></p>
-            <p class="body-text">The Little Mermaid Storytime (<a class="hyperlink" href="https://apps.apple.com/us/app/the-little-mermaid-storytime/id1384512321?ls=1">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.thelittlemermaid.storytime">Android</a>)</p>
+            <!-- <p class="body-text">The Little Mermaid Storytime (<a class="hyperlink" href="https://apps.apple.com/us/app/the-little-mermaid-storytime/id1384512321?ls=1">iOS</a>/<a class="hyperlink" href="https://play.google.com/store/apps/details?id=com.thelittlemermaid.storytime">Android</a>)</p> -->
             <p class="body-text">Creepypasta Stickers (<a class="hyperlink" href="https://apps.apple.com/us/app/creepypasta-stickers/id1299579002">iOS</a>)</p>
             <p class="body-text"><a class="hyperlink" href="https://www.dafont.com/golden-dragon.font">Golden Dragon Font Family</a></p>
             <p class="body-text"><a class="hyperlink" href="https://cottonbureau.com/people/alberto-de-la-cruz">T-shirt Design</a></p>
