--- a/index.html
+++ b/index.html
@@ -240,9 +240,8 @@ a{
         <div class="content-cell">
             <p class="big-body-text">Feel free to reach out!</p>
             <p class="body-text"><a class="hyperlink" href="mailto:alberto@tokeninteractive.com">Email</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://imdb.me/alberto">IMDb</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertotoken/">LinkedIn</a></p>
-
+            <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a></p>
+            <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertodelacruz</a></p>
         </div>
     </div>
 </div>
