--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ a{
             <p class="big-body-text">Feel free to reach out!</p>
             <p class="body-text"><a class="hyperlink" href="mailto:alberto@tokeninteractive.com">Email</a></p>
             <p class="body-text"><a class="hyperlink" href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a></p>
-            <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertodelacruz</a>Dribbble</p>
+            <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertodelacruz">Dribbble</a></p>
         </div>
     </div>
 </div>
