created appearances section

--- a/index.html
+++ b/index.html
@@ -205,17 +205,10 @@ a{
     </div>
     <div class="flex-container">
         <div class="title-cell">
-            <p class="small-bold-text sticky-text">Public Speaking</p>
+            <p class="small-bold-text sticky-text">Appearances</p>
         </div>
         <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://www.youtube.com/watch?v=U0Mb5N4Skc0&t">User Experience Design in Gaming, PAX East 2020</a></p>
-        </div>
-    </div>
-    <div class="flex-container">
-        <div class="title-cell">
-            <p class="small-bold-text sticky-text">Press</p>
-        </div>
-        <div class="content-cell">
             <p class="body-text"><a class="hyperlink" href="https://startup.info/alberto-de-la-cruz-token-interactive/">A Game Studio Finds New Opportunities during a Pandemic, Startup Info</a></p>
             <p class="body-text"><a class="hyperlink" href="https://www.loversmagazine.com/interviews/alberto-de-la-cruz">Interview with Alberto de la Cruz, Lovers Magazine</a></p>
         </div>
