--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a{
     <div id="center-box">
         <div>
             <p class="small-bold-text">Alberto de la Cruz</p>
-            <p class="bold-text">I am a product designer creating innovative digital media.</p>
+            <p class="bold-text">I am a product designer focusing on consumer experiences.</p>
             <p class="big-body-text main-text">I’m the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and the founding designer at <a class="hyperlink" href="http://spanglishmedia.com">Spanglish Media</a>.</p> 
             <p class="big-body-text main-text">To me, design is visual engineering. I am focused on leadership and creafting elegant product solutions for our users. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. As someone with an extensive background in tech, design, production, and storytelling I excel at wearing many hats and making the impossible possible.</p>
         </div>
