--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ a{
             <p class="small-bold-text">Alberto de la Cruz</p>
             <p class="bold-text">I am a product designer focusing on consumer experiences.</p>
             <p class="big-body-text main-text">I’m a designer, web developer, educator, and mentor with almost a decade of experience in the tech space. I founded <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and am the founding designer at <a class="hyperlink" href="http://spanglishmedia.com">Spanglish Media</a>.</p> 
-            <p class="big-body-text main-text">To me, design is visual engineering. I am focused on leadership and creafting elegant product solutions for our users. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. As someone with an extensive background in tech, design, production, and storytelling I excel at wearing many hats and making the impossible possible.</p>
+            <p class="big-body-text main-text">To me, design is visual engineering. I’m great at hitting tight deadlines by figuring out simple solutions to complex problems, cutting the right corners in the process. As someone with an extensive background in tech, design, and everything in between I excel at wearing many hats and making the impossible possible.</p>
         </div>
     </div>
     <div class="divider-block"></div>
