--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,10 @@ a{color:#4169E1;}
 a:hover{color:#002395;transition: all 1s;}
 </style>
 <body style="font-family:monospace;background:#f2f2f2;text-shadow: 0 1px 0 #fff;color:#444;line-height:24px;">
-Alberto de la Cruz</br>
-I'm a product manager living <a href="https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/">on</a> Long Island, originally from Puerto Rico.</br>
-I've previously worked as a designer and front-end developer in various NYC tech startups and have taught at Parsons School of Design.</br>
-Outside of work I like retro gaming, craft beer, and good coffee.</br>
+<b>Alberto de la Cruz</b></br>
+<ul style="margin: 0;">
+    <li>I'm a product manager living <a href="https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/">on</a> Long Island, originally from Puerto Rico.</li>
+    <li>I've previously worked as a designer and front-end developer in various NYC tech startups and have taught at Parsons School of Design.</li>
+    <li>Outside of work I like retro gaming, craft beer, and good coffee.</li>
+</ul>
 <a href="https://albertodelacruz.io/">Home</a> / <a href="https://albertodelacruz.io/about">About</a> / <a href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a> / <a href="mailto:agdelax@gmail.com">Email</a>
