--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@ a:hover{color:#002395;transition: all 1s;}
 <b>Alberto de la Cruz</b></br>
 About Me:</br>
 <ul style="margin: 0;">
-    <li>I'm a product manager living <a href="https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/">on</a> Long Island, originally from Puerto Rico.</li>
+    <li>I'm a product manager and hobbyist filmmaker/game designer living <a href="https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/">on</a> Long Island, originally from Puerto Rico.</li>
     <li>I've previously worked as a designer and front-end developer in various NYC tech startups and have taught at Parsons School of Design.</li>
     <li>Outside of work I like retro gaming, Lovecraftian horror, craft beer, and good coffee.</li>
 </ul>
