--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ a:hover{color:#002395;transition: all 1s;}
 </style>
 <body style="font-family:monospace;background:#f2f2f2;text-shadow: 0 1px 0 #fff;color:#444;line-height:24px;">
 <b>Alberto de la Cruz</b></br>
-About Me:</br>
+<b>About Me:</b></br>
 <ul style="margin: 0;">
     <li>I'm a product manager, game designer, and filmmaker living <a href="https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/">on</a> Long Island, originally from Puerto Rico.</li>
     <li>I've previously worked as a designer and front-end developer in several NYC tech startups and have taught at Parsons School of Design.</li>
