--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -7,6 +7,4 @@ a{color:#4169E1;}
 a:hover{color:#002395;transition: all 1s;}
 </style>
 <body style="font-family:monospace;background:#f2f2f2;text-shadow: 0 1px 0 #fff;color:#444;line-height:24px;">
-<b>Alberto de la Cruz</b></br>
-<b>Privacy Policy:</b> I do not collect or store data from you.</br>
-<a href="https://albertodelacruz.io/">Home</a> / <a href="https://albertodelacruz.io/about">About</a> / <a href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a> / <a href="mailto:agdelax@gmail.com">Email</a>
+I do not collect or store data from you.
