--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="data:,">
-<title>Alberto de la Cruz</title>
+<html>
+<head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 <style>
-a{color:#4169E1;}
-a:hover{color:#002395;transition: all 1s;}
+	body{
+    	background: rgb(116,116,116);
+		background: -moz-radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
+		background: -webkit-radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
+		background: radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
+		filter: 		progid:DXImageTransform.Microsoft.gradient(startColorstr="#747474",endColorstr="#000000",GradientType=1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: calc(100vh - 32px);
+        color: white;
+        text-align: center;
+        font-family: "Oswald", serif;
+  		font-optical-sizing: auto;
+ 		font-weight: <weight>;
+  		font-style: normal;
+        }
+     h1{
+     	margin: 0;
+     	}
+     a{
+     	color: #f5f5f5;
+      }
+     a:hover{color:white;}
+     p{
+     	font-size: 1.2rem;
+        margin: 0;
+       }
 </style>
-<body style="font-family:monospace;background:#f2f2f2;text-shadow: 0 1px 0 #fff;color:#444;line-height:24px;">
-<b>Alberto de la Cruz</b></br>
-Product Manager, making games and movies in my free time.</br>
-<a href="https://albertodelacruz.io/">Home</a> / <a href="https://albertodelacruz.io/about">About</a> / <a href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a> / <a href="mailto:agdelax@gmail.com">Email</a>
+<title>Alberto de la Cruz</title>
+</head>
+<body>
+<div>
+	<h1>Alberto de la Cruz</h1>
+	<p>Product Manager / <a href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a></p>
+</div>
+</body>
+</html>
