--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<style>
-	body{
-    	background: rgb(116,116,116);
-		background: -moz-radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
-		background: -webkit-radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
-		background: radial-gradient(circle, rgba(116,116,116,1) 0%, rgba(0,0,0,1) 100%);
-		filter: 		progid:DXImageTransform.Microsoft.gradient(startColorstr="#747474",endColorstr="#000000",GradientType=1);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: calc(100vh - 32px);
-        color: white;
-        text-align: center;
-        font-family: "Oswald", serif;
-  		font-optical-sizing: auto;
- 		font-weight: <weight>;
-  		font-style: normal;
-        }
-     h1{
-     	margin: 0;
-     	}
-     a{
-     	color: #f5f5f5;
-      }
-     a:hover{color:white;}
-     p{
-     	font-size: 1.2rem;
-        margin: 0;
-       }
-</style>
-<title>Alberto de la Cruz</title>
-</head>
-<body>
-<div>
-	<h1>Alberto de la Cruz</h1>
-	<p>Product Manager / <a href="https://www.linkedin.com/in/albertodelax/">LinkedIn</a></p>
-</div>
-</body>
-</html>
+<!doctypehtml><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><link href=https://fonts.googleapis.com rel=preconnect><link href=https://fonts.gstatic.com rel=preconnect crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"rel=stylesheet><style>body{background:radial-gradient(circle,#747474 0,#000 100%);display:flex;align-items:center;justify-content:center;height:calc(100vh - 32px);color:#fff;text-align:center;font-family:Oswald,sans-serif}h1,p{margin:0}p{font-size:1.2rem}a{color:#f5f5f5}a:hover{color:#fff}</style><title>Alberto de la Cruz</title><div><h1>Alberto de la Cruz</h1><p>Product Manager / <a href=https://www.linkedin.com/in/albertodelax/ >LinkedIn</a></div>
