--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<!doctypehtml><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><style>@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');body{background:radial-gradient(circle,#0e7a0d 0,#000 100%);display:flex;align-items:center;justify-content:center;height:calc(100vh - 32px);color:#fff;text-shadow:0 1px 0 #000;text-align:center;font-family:Oswald,sans-serif}h1,p{margin:0}p{font-size:1.2rem}a{color:#f5f5f5}a:hover{color:#fff}</style><title>Alberto de la Cruz</title><div><h1>Alberto de la Cruz</h1><p>Product Manager living <a href=https://www.reddit.com/r/longisland/comments/t7z3v9/is_it_on_or_in_long_island/ >on</a> Long Island, NY.</div>
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Press+Start+2P&display=swap" rel="stylesheet">
+      <title>Alberto de la Cruz</title>
+      <style>
+      	body{
+          font-family: "Press Start 2P", system-ui;
+          font-weight: 400;
+          font-style: normal;
+          background: #3973aa;
+          color: white;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: calc(100vh - 48px);
+          text-align: center;
+        }
+        h1{
+        	font-weight: 400;
+        }
+        a{
+        	color: white;
+        }
+      </style>
+  </head>
+  <body>
+    <div>
+        <h1>Alberto de la Cruz</h1>
+        <p>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a></p>
+    </div>
+  </body>
+</html>
