--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Press+Start+2P&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Press+Start+2P&display=swap" rel="stylesheet">
       <title>Alberto de la Cruz</title>
       <style>
       	body{
-          font-family: "Press Start 2P", system-ui;
+          font-family: "Oswald", sans-serif;
           font-weight: 400;
           font-style: normal;
           background: #3973aa;
@@ -20,8 +20,10 @@
           height: calc(100vh - 48px);
           text-align: center;
         }
-        h1{
+        h1, h2{
         	font-weight: 400;
+            margin: 0;
+			text-shadow: 0px 2px 0px rgba(9, 18, 72, 1);
         }
         a{
         	color: white;
@@ -31,7 +33,7 @@
   <body>
     <div>
         <h1>Alberto de la Cruz</h1>
-        <p>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a></p>
+        <h2>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a></h2>
     </div>
   </body>
 </html>
