--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,13 +13,13 @@
           font-family: "Oswald", sans-serif;
           font-weight: 400;
           font-style: normal;
-          background: #3973aa;
+          background: #3c3f58;
           color: white;
           display: flex;
           align-items: center;
           justify-content: center;
-          height: calc(100vh - 48px);
-          text-align: center;
+          height: calc(100vh - 88px);
+          padding: 20px;
         }
         h1, h2{
         	font-weight: 400;
@@ -32,8 +33,8 @@
   </head>
   <body>
     <div>
-        <h1>Alberto de la Cruz</h1>
-        <h2>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a></h2>
+        <h2>Alberto de la Cruz</h2>
+        <h1>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a> living on Long Island.</h1>
     </div>
   </body>
 </html>
