--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div>
         <h2>Alberto de la Cruz</h2>
-        <h1>Product Manager and <a href="https://www.filmsbyalberto.com">Filmmaker</a> living on Long Island.</h1>
+        <h1><a href="https://www.linkedin.com/in/albertodelax/">Product Manager</a> and <a href="https://www.imdb.com/name/nm11476033/">Filmmaker</a> on Long Island.</h1>
     </div>
   </body>
 </html>
